Fix issue 03976: Layout problem at Multiple short text Dev Vertically aligned the label to top - improved layout in Firefox with multiple row textareas
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@8152 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/templates/bluengrey/template.css
+++ b/templates/bluengrey/template.css
@@ -697,14 +697,20 @@ ul.cols-8-ul label {
 	display: table-cell;
 	vertical-align: baseline;
 }
- .multiple-short-txt ul li label
-,.numeric-multi ul li label
-,.numeric-multi ul.slider li label
-{
+
+.numeric-multi ul li label,
+.numeric-multi ul.slider li label {
 	padding: 0.3em 1em 0% 0%;
 	display: table-cell;
 	vertical-align: baseline;
 }
+
+.multiple-short-txt ul li label {
+	padding: 0.3em 1em 0% 0%;
+	display: table-cell;
+	vertical-align: top;
+}
+
 .numeric-multi ul.computed li label
 .numeric-multi ul.slider.computed li label
 {
